apps/miscellaneous/obsidian/obsidian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian
  namespace: obsidian
  annotations:
    checkov.io/skip1: "CKV_K8S_8"
    checkov.io/skip2: "CKV_K8S_9"
    checkov.io/skip3: "CKV_K8S_25"
    checkov.io/skip4: "CKV_K8S_29"
    checkov.io/skip5: "CKV_K8S_35"
    checkov.io/skip6: "CKV_K8S_38"
    checkov.io/skip7: "CKV_K8S_40"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      containers:
        - name: obsidian-remote
          image: ghcr.io/sytone/obsidian-remote@sha256:0494ea57446e77609a469caf08a6886f3825f893883bfab2f4736e06d01c19b2
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: vaults
              mountPath: /vaults
              subPath: obsidian/vaults
            - name: config
              mountPath: /config
              subPath: obsidian/config
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
            runAsNonRoot: true
            runAsUser: 10001                          
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "256Mi"
              cpu:    "250m"
            limits:
              memory: "1Gi"
              cpu:    "750m"
      volumes:
        - name: obsidian-pvc
          persistentVolumeClaim:
            claimName: obsidian-pvc
        - name: tmp-volume
          emptyDir: {}
