apps/miscellaneous/obsidian/obsidian-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
spec:
  selector:
    app: obsidian
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8443
  type: ClusterIP
